--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "keywords": [
     "karma-plugin",
-    "launcher",
+    "karma-launcher",
     "ie"
   ],
   "author": "Vojta Jina <vojta.jina@gmail.com>",
