--- a/package.json
+++ b/package.json
@@ -27,5 +27,7 @@
     "grunt-npm": "~0.0.2",
     "grunt-auto-release": "~0.0.2"
   },
-  "contributors": []
+  "contributors": [
+    "Andreas Krummsdorf <a.krummsdorf@litixsoft.de>"
+  ]
 }
