--- a/package.json
+++ b/package.json
@@ -23,11 +23,20 @@
   "license": "MIT",
   "devDependencies": {
     "grunt": "~0.4.1",
+    "grunt-simple-mocha": "~0.4.0",
     "grunt-bump": "~0.0.7",
     "grunt-npm": "~0.0.2",
     "grunt-auto-release": "~0.0.2",
     "grunt-contrib-jshint": "~0.7.2",
-    "grunt-jscs-checker": "~0.4.0"
+    "grunt-jscs-checker": "~0.4.0",
+    "mocks": "0.0.11",
+    "sinon": "~1.7.3",
+    "chai": "~1.7.2",
+    "sinon-chai": "~2.4.0",
+    "grunt-coffeelint": "~0.0.6",
+    "karma": "~0.12.0",
+    "di": "~0.0.1",
+    "grunt-contrib-watch" : "~0.6.1"
   },
   "contributors": [
     "sylvain-hamel <sylvainhamel0@gmail.com>",
