--- a/package.json
+++ b/package.json
@@ -16,27 +16,32 @@
     "ie"
   ],
   "author": "Vojta Jina <vojta.jina@gmail.com>",
-  "dependencies": {},
+  "dependencies": {
+    "lodash": "^3.9.3"
+  },
   "peerDependencies": {
     "karma": ">=0.9"
   },
   "license": "MIT",
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-simple-mocha": "~0.4.0",
-    "grunt-bump": "~0.0.7",
-    "grunt-npm": "~0.0.2",
-    "grunt-auto-release": "~0.0.2",
-    "grunt-contrib-jshint": "~0.7.2",
-    "grunt-jscs-checker": "~0.4.0",
+    "chai": "^2.3.0",
+    "di": "^0.0.1",
+    "eslint": "^0.22.1",
+    "eslint-config-standard": "^2.0.1",
+    "eslint-plugin-react": "^2.5.0",
+    "grunt": "^0.4.1",
+    "grunt-auto-release": "^0.0.2",
+    "grunt-bump": "^0.3.1",
+    "grunt-contrib-watch": "^0.6.1",
+    "grunt-conventional-changelog": "^1.2.2",
+    "grunt-eslint": "^14.0.0",
+    "grunt-npm": "^0.0.2",
+    "grunt-simple-mocha": "^0.4.0",
+    "karma": "^0.12.0",
+    "load-grunt-tasks": "^3.2.0",
     "mocks": "0.0.11",
-    "sinon": "~1.7.3",
-    "chai": "~1.7.2",
-    "sinon-chai": "~2.4.0",
-    "grunt-coffeelint": "~0.0.6",
-    "karma": "~0.12.0",
-    "di": "~0.0.1",
-    "grunt-contrib-watch" : "~0.6.1"
+    "sinon": "^1.14.1",
+    "sinon-chai": "^2.8.0"
   },
   "contributors": [
     "sylvain-hamel <sylvainhamel0@gmail.com>",
