--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: node_js
 node_js:
-  - 0.8
-  - 0.10
+  - "iojs"
+  - "0.12"
+  - "0.10"
+  - "0.8"
 
 # Make sure we have new NPM.
 before_install:
