chore: update contributors

--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
   "contributors": [
     "sylvain-hamel <sylvainhamel0@gmail.com>",
     "Sylvain Hamel <sylvainhamel0@gmail.com>",
+    "dignifiedquire <dignifiedquire@gmail.com>",
     "Andreas Krummsdorf <a.krummsdorf@litixsoft.de>",
+    "Nikita Khomyakov <dr.evil@krtn.eu>",
     "Christopher Currie <ccurrie@impresys.com>"
   ]
 }
