--- a/package.json
+++ b/package.json
@@ -17,29 +17,31 @@
   ],
   "author": "Vojta Jina <vojta.jina@gmail.com>",
   "dependencies": {
-    "lodash": "^3.9.3"
+    "lodash": "^4.6.1"
   },
   "peerDependencies": {
     "karma": ">=0.9"
   },
   "license": "MIT",
   "devDependencies": {
-    "chai": "^2.3.0",
+    "chai": "^3.5.0",
     "di": "^0.0.1",
-    "eslint": "^0.22.1",
-    "eslint-config-standard": "^2.0.1",
-    "eslint-plugin-react": "^2.5.0",
+    "eslint": "^2.4.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-plugin-promise": "^1.1.0",
+    "eslint-plugin-react": "^4.2.1",
+    "eslint-plugin-standard": "^1.3.2",
     "grunt": "^0.4.1",
-    "grunt-auto-release": "^0.0.2",
-    "grunt-bump": "^0.3.1",
-    "grunt-contrib-watch": "^0.6.1",
-    "grunt-conventional-changelog": "^1.2.2",
-    "grunt-eslint": "^14.0.0",
+    "grunt-auto-release": "^0.0.6",
+    "grunt-bump": "^0.7.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-conventional-changelog": "^6.1.0",
+    "grunt-eslint": "^18.0.0",
     "grunt-npm": "^0.0.2",
     "grunt-simple-mocha": "^0.4.0",
-    "karma": "^0.12.0",
+    "karma": "^0.13.22",
     "load-grunt-tasks": "^3.2.0",
-    "mocks": "0.0.11",
+    "mocks": "0.0.15",
     "sinon": "^1.14.1",
     "sinon-chai": "^2.8.0"
   },
