--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 node_js:
-  - "iojs"
+  # "iojs"
   - "5"
-  - "4"
-  - "0.12"
-  - "0.10"
+  # "4"
+  # "0.12"
+  # "0.10"
 
 # Make sure we have new NPM.
 before_install:
