--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "grunt-eslint": "^18.0.0",
     "grunt-npm": "^0.0.2",
     "grunt-simple-mocha": "^0.4.0",
-    "karma": "^0.13.22",
+    "karma": "1.x || ^0.13.22",
     "load-grunt-tasks": "^3.2.0",
     "mocks": "0.0.15",
     "sinon": "^1.14.1",
