--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   ],
   "author": "Vojta Jina <vojta.jina@gmail.com>",
   "dependencies": {
-    "lodash": "^4.6.1"
+    "lodash": "^4.6.1",
+    "qjobs": "^1.2.0"
   },
   "peerDependencies": {
     "karma": ">=0.9"
